Fixed: leftpanel not rerendering after receiving message + second coversation creating after finding user from receiver perspective

--- a/src/styles/LoginStyles.css
+++ b/src/styles/LoginStyles.css
@@ -46,5 +46,5 @@
 	font-family: 'Press Start 2P', cursive;
 	color:red;
 	font-size:10px;
-	text-align:justify;
+	text-align:center;
 }
