--- a/src/styles/register.css
+++ b/src/styles/register.css
@@ -68,7 +68,7 @@
 	font-size: 10px;	
 }
 
-.errors{
+.errorsReg{
 	font-family: 'Press Start 2P', cursive;
 	color:red;
 	font-size:10px;
